<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FAITH App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_register_user">Register account</string>
    <string name="title_activity_register_user_acccount">Register new Account</string>
    <string name="title_activity_register_user_acccount_confirmation">Account registered</string>
    <string name="button_register">Register</string>
    <string name="registeruser_form_title">Please enter the following information to create a new user account:</string>
    <string name="labelUserAccountUserId">id</string>
    <string name="labelUserAccountPassword">Password</string>
    <string name="labelUserAccountEmail">E-Mail</string>
    <string name="registeruser_confirmation_title">Thanks for registering. Your account information:</string>
    <string name="title_activity_about_faith">About Us</string>
    <string name="about_application">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_application_text">This application is written and designed by TeamFAITH within the scope of the module "Software Engineering 2 Project" at the University of Applied Sciences, Rapperswil. \n \n Developpers: \n \t - Stefan Kapferer \n \t - Mathias Vetsch \n \t - Dominic Mühlhaupt \n \t - Daniel Kolb \n \t - Haris Sisic \n \n Contact: Mathias Vetsch, mvetsch@hsr.ch </string>
    <string name="title_activity_login_user_account">Log in</string>
    <string name="title_activity_logout_user_account">Log out</string>
    <string name="action_facilities_management">My Facilities</string>
    <string name="title_activity_facilities">Organize Facilities</string>
    <string name="authentication_email_field_default_text">E-mail</string>
    <string name="authentication_password_field_default_text">Password</string>
    <string name="authentication_button_text">Log in</string>
    <string name="authentication_message_success">authentication successful</string>
    <string name="authentication_message_logout">Successfully logged out</string>
    <string name="authentication_message_failure">invalid credentials</string>
    <string name="title_activity_furniture_main">Furniture</string>
    <string name="title_activity_facility_main">Facility</string>
    <string name="checkox_save_current_gps_location">Save my current GPS location</string>
    <string name="dialog_alert_gps_or_network_disabled"> Your GPS is disabled. To receive exact location, please enable GPS in your phone settings.</string>
    <string name="request_progress_dialog_loading">Loading &#8230;</string>
    <string name="activity_facilities_tabbed_tab_list">List</string>
    <string name="activity_facilities_tabbed_tab_map">Map</string>
    <string name="title_activity_facilities_tabbed">Facilities</string>
    <string name="title_activity_facilities_management">Manage Facilities</string>
    <string name="facility_rowitem_level_image_description">Level Symbol</string>
    <string name="title_edit_facility_activity">Edit Facility</string>
    <string name="error_occured_message">Error orrured: </string>
    <string name="service_return_status_unknown">Service returned unknown response status!</string>
    <string name="error">Error</string>
    <string name="edit_facility_tab_info">Info</string>
    <string name="edit_facility_tab_inventory">Inventory</string>
    <string name="button_add_item_needed">Add piece of furniture</string>
    <string name="add_item_needed_title">Add needed piece of furniture:</string>
    <string name="add_item_needed_no_piece_of_furniture_selected">No piece of furniture selected.</string>
    <string name="add_item_needed_piece_of_furniture_selected">Selected piece of furniture:</string>
    <string name="button_select_piece_of_furniture">Select piece of furniture</string>
    <string name="add_item_needed_amount">Amount</string>
    <string name="add_item_needed_description">Description</string>
    <string name="add_item_needed_save">Save</string>
    <string name="title_add_item_needed_activity">Add needed item</string>
    <string name="add_item_needed_error_amount_empty">Amount is required!</string>
    <string name="add_item_needed_error_piece_of_furniture_empty">Please select a piece of furniture!</string>
    <string name="select_piece_of_furniture_popup_title">Select piece of furniture:</string>
    <string name="button_select_piece_of_furniture_popup_cancel">Cancel</string>
    <string name="select_piece_of_furniture_top_item_text">Up to</string>
    <string name="select_piece_of_furniture_top_item_root_text">Up to root</string>
    <string name="label_user_account_user_id">id</string>
    <string name="label_user_account_password">Password</string>
    <string name="label_user_account_email">E-Mail</string>
    <string name="add_item_needed_successfully_saved">Successfully saved piece of furniture</string>
    <string name="error_occurred_message">Error occurred: </string>
    <string name="button_add_facility">Add Facility</string>
    <string name="title_activity_add_facility">Add Facility</string>
    <string name="label_facility_name">Name of Facility</string>
	<string name="label_facility_street">Street</string>
	<string name="label_facility_zip">Zipcode</string>
	<string name="label_facility_city">City</string>
	<string name="label_facility_homepage">Homepage</string>
	<string name="label_facility_phone">Phone</string>
	<string name="label_facility_email">E-Mail Address</string>
	<string name="button_add_or_edit_facility">Add Facility</string>
	<string name="label_button_add_facility">Add Facility</string>
	<string name="label_button_edit_facility">Edit Facility</string>
	<string name="authentication_button_register_text">Register</string>
	<string name="authentication_button_cancel_text">Cancel</string>
	<string-array name="countries_available">
        <item>Switzerland</item>
        <item>Liechtenstein</item>
    </string-array>
    <string name="add_item_needed_delete">Delete</string>
    <string name="add_item_needed_successfully_deleted">Successfully deleted</string>
    <string name="location_successfully_saved">Location successfully saved</string>
    <string name="location_not_saved">Location could not be saved</string>
    <string name="fetching_location">Fetching location</string>
    <string name="location_removing_successful">Location successfully removed</string>
    <string name="location_removing_failed">Location removing failed</string>
    <string name="title_activity_facility_info">FacilityInfoActivity</string>
        
    <!--  The strings below this line are not yet translated  -->
    <string name="user_input_validation_message_invalid_email_address">Enter a valid Mail Address</string>
    <string name="user_input_validation_message_invalid_password">Password must have a minimum of 4 chars</string>
    <string name="add_facility_error_name_empty">The name of the facility is required.</string>
    <string name="add_facility_error_street_empty">A street is required.</string>
    <string name="add_facility_error_zip_empty">The zipcode is required.</string>
    <string name="add_facility_error_city_empty">The city is required.</string>
    <string name="add_facility_error_email_empty">An e-mail address is required.</string>
    <string name="add_facility_error_no_country_selected">Please select a country.</string>
    <string name="add_facility_error_no_category_selected">Please choose the category your facility belongs to.</string>
    <string name="add_facility_successfully_saved">Facility added.</string>
	<string name="facility_category_prompt">Select Facility Category</string>
	<string name="country_prompt">Select Country</string>
    <string name="hsr_logo_description">HSR Logo</string>
    <string name="activity_facility_info_tab_main">Info</string>
    <string name="activity_facility_info_tab_items_needed">Inventory</string>
</resources>
