<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_loginuseraccount"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/title_activity_login_user_account" />
    <item
        android:id="@+id/action_registeruseraccount"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/activity_register_user" />
    <item
        android:id="@+id/action_facilities"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_facilities" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/about_application" />

</menu>