<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddFacilityScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/addFacilityFailures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="#F70D1A"
            android:textSize="10pt"
            android:visibility="invisible" >
        </TextView>

        <Spinner
            android:id="@+id/selectFacilityCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editFacilityName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_name"
            android:inputType="textCapWords" />

        <Spinner
            android:id="@+id/selectFacilityCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editFacilityStreet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_street"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/editFacilityZip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_zip"
            android:inputType="number" />

        <EditText
            android:id="@+id/editFacilityCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_city"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/editFacilityHomepage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_homepage"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/editFacilityPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editFacilityEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_facility_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="22dp"
            android:layout_marginTop="42dp"
            android:onClick="addButtonClicked"
            android:text="@string/button_add_facility" />
    </LinearLayout>

</ScrollView>