<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RegisterUserAccountScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/RegisterUserTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registeruser_form_title"
            android:textSize="10pt"
            android:paddingBottom="10dp" >
        </TextView>
        
        <TextView
            android:id="@+id/RegisterUserFailures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:paddingBottom="10dp"
            android:textColor="#F70D1A"
            android:visibility="invisible" >
        </TextView>
        
        <EditText
            android:id="@+id/editUserAccountUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelUserAccountUserName"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editUserAccountEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelUserAccountEmail"
            android:inputType="textEmailAddress" >
        </EditText>

        <EditText
            android:id="@+id/editUserAccountPasswort"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelUserAccountPassword"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="22dp"
            android:layout_marginTop="42dp"
            android:onClick="registerButtonClicked"
            android:text="@string/button_register" />
    </LinearLayout>

</ScrollView>