<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/RegisterUserConfirmationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registeruser_confirmation_title"
            android:textSize="10pt"
            android:paddingBottom="10dp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelUserAccountUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="8pt"
            android:text="@string/labelUserAccountUserId" >
        </TextView>
        <TextView
            android:id="@+id/textViewUserAccountUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textSize="8pt" >
        </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelUserAccountEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="8pt"
            android:text="@string/labelUserAccountEmail" >
        </TextView>
        <TextView
            android:id="@+id/textViewUserAccountEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textSize="8pt" >
        </TextView>
    </LinearLayout>
    
    
</LinearLayout>